# my-cuda

./: .gitignore  CMakeLists.txt
A/: CMakeLists.txt  a.cu  a.out
memory/: CMakeLists.txt  memory.cu
other/: nam_to_num.py  nan_to_num.cu
reduuce/: b.cu
sgemm/: CMakeLists.txt  Makefile  a.cu  a.py  b.py  bench.py  c.cu  cu_blas.cu  main.py  note.txt  sgemm_double_buffer.cu  sgemm_memory_coalesce.cu  sgemm_native.cu  sgemm_rmem_cache.cu  sgemm_smem_cache.cu  temp1.txt  test.py  util.h  utils.py
test/: a.py  temp2.txt
